@@ -11,18 +11,18 @@
 [![kotlin lang)](https://img.shields.io/github/v/release/JetBrains/kotlin?label=kotlin&logo=kotlin)](https://github.com/JetBrains/kotlin)
 [![IntelliJ IDEA Community Edition](https://img.shields.io/badge/IntelliJ%20IDEA%20Community%20Edition-blue?style=flat)](https://www.jetbrains.com/idea/download/#section=linux)
 [![Docker-(2019.03.13)](https://img.shields.io/badge/Docker-%2019.03.13-brightgreen)](https://www.docker.com/)
-[![CircleCI](https://circleci.com/gh/cnruby/gradle_kotlin/tree/basic_216.svg?style=svg)](https://app.circleci.com/pipelines/github/cnruby/gradle_kotlin?branch=basic_216)
+[![CircleCI](https://circleci.com/gh/cnruby/gradle_kotlin/tree/basic_218.svg?style=svg)](https://app.circleci.com/pipelines/github/cnruby/gradle_kotlin?branch=basic_218)
 
 
 ---
 
-Unit 216: Hello @ControllerAdvice!
-<h1>Unit 216: Hello @ControllerAdvice!</h1>
+Unit 218: Hello REST Assured!
+<h1>Unit 218: Hello REST Assured!</h1>
 
-- How to Understand The Annotation @ControllerAdvice 
-- @ControllerAdvice allows handling exceptions across the whole application
-- @ControllerAdvice is a specialization of the @Component annotation
-- @ControllerAdvice is a global handling component @ExceptionHandler  
+- How to Understand The REST Assured 
+- REST Assured is a Java DSL
+- REST Assured simplify testing of REST based services built on top of HTTP Builder
+
 
 ---
 
@@ -34,33 +34,32 @@ Unit 216: Hello @ControllerAdvice!
 - [Prerequisites](#prerequisites)
 - [Create A New Kotlin Web App](#create-a-new-kotlin-web-app)
   - [DO (create a new project)](#do-create-a-new-project)
-  - [DO (edit a spring model file)](#do-edit-a-spring-model-file)
-  - [DO (edit a schema file for spring datasource)](#do-edit-a-schema-file-for-spring-datasource)
-  - [DO (edit a data file for spring datasource)](#do-edit-a-data-file-for-spring-datasource)
   - [DO (check the project)](#do-check-the-project)
-- [Check The Web App](#check-the-web-app)
-  - [DO (run the web application with gradle)](#do-run-the-web-application-with-gradle)
-  - [DO (access all book's records in the web application api)](#do-access-all-books-records-in-the-web-application-api)
-  - [DO (access the first book's record in the web application api)](#do-access-the-first-books-record-in-the-web-application-api)
-  - [DO (access the web app api if a record exists not)](#do-access-the-web-app-api-if-a-record-exists-not)
-  - [DO (stop the web server)](#do-stop-the-web-server)
-- [Add The ExceptionHandler @ControllerAdvice annotation](#add-the-exceptionhandler-controlleradvice-annotation)
-  - [DO (make a new folder for exception handler)](#do-make-a-new-folder-for-exception-handler)
-  - [DO (add a new book's exception file)](#do-add-a-new-books-exception-file)
-  - [DO (add a new rest's exception handler file)](#do-add-a-new-rests-exception-handler-file)
-  - [DO (edit the rest controller file)](#do-edit-the-rest-controller-file)
-  - [DO (run the web application with gradle again)](#do-run-the-web-application-with-gradle-again)
-  - [DO (access in the web app api if a record exists not)](#do-access-in-the-web-app-api-if-a-record-exists-not)
+- [Develop the gradle build file](#develop-the-gradle-build-file)
+  - [DO (add the package `rest-assured` to the gradle build file)](#do-add-the-package-rest-assured-to-the-gradle-build-file)
+  - [DO (check the project to get the error)](#do-check-the-project-to-get-the-error)
+  - [DO (edit a gradle build file for spring boot)](#do-edit-a-gradle-build-file-for-spring-boot)
+  - [DO (check the project again to get many warnings)](#do-check-the-project-again-to-get-many-warnings)
+  - [DO (edit a gradle build file for spring boot again)](#do-edit-a-gradle-build-file-for-spring-boot-again)
+  - [DO (check the project noch again)](#do-check-the-project-noch-again)
+- [DO (Upgrade the gradle version to 6.8)](#do-upgrade-the-gradle-version-to-68)
+- [Develop REST Assured Testing for The Web App](#develop-rest-assured-testing-for-the-web-app)
+  - [DO (add a new book controller testing file)](#do-add-a-new-book-controller-testing-file)
+  - [DO (start the web app)](#do-start-the-web-app)
+  - [DO (run the testing in the project with gradle)](#do-run-the-testing-in-the-project-with-gradle)
+  - [DO (see the testing report)](#do-see-the-testing-report)
 - [References](#references)
 - [References for tools](#references-for-tools)
 
 
 
+
 ## Keywords
-- @ControllerAdvice `Web Application` REST API h2 Exception Handler
+- `Rest Assured` `Web Application` REST API Testing
 - `Java JDK` `Command Line Kotlin Compiler` `IntelliJ CE` CircleCI CI
 - tutorial example Kotlin REPL Ubuntu Gradle jabba JDK Java JVM
-- database h2 Console `Spring Boot` `Spring DataSource` JPA Hibernate Classpath
+- database h2 Console `Spring Boot` `Spring DataSource` JPA Hibernate Classpath h2
+
 
 
 
@@ -73,58 +72,95 @@ Unit 216: Hello @ControllerAdvice!
 
 
 
+
 ## Create A New Kotlin Web App
 
 ### DO (create a new project)
 ```bash
-EXISTING_APP_ID=213 && NEW_APP_ID=216 && \
+EXISTING_APP_ID=216 && NEW_APP_ID=218 && \
 git clone -b basic_${EXISTING_APP_ID} https://github.com/cnruby/gradle_kotlin.git ${NEW_APP_ID}_gradle_kotlin && \
 cd ${NEW_APP_ID}_gradle_kotlin
 ```
 
-### DO (edit a spring model file)
-```bash
-nano ./src/main/kotlin/de/iotoi/model/Book.kt
-```
-```Kotlin
-// FILE (Book.kt)
-...
-@Entity
-@Table(name="books")
-class Book {
-...
-```
-
-### DO (edit a schema file for spring datasource)
-```bash
-nano ./src/main/resources/schema.sql
-```
-```sql
--- FILE (schema.sql)
-DROP TABLE IF EXISTS books;
-
-CREATE TABLE books (
-  id INT AUTO_INCREMENT  PRIMARY KEY,
-  title VARCHAR(250) NOT NULL,
-  author VARCHAR(250),
-  created TIMESTAMP(9) DEFAULT CURRENT_TIMESTAMP
-);
-
-INSERT INTO books(title, author) VALUES ('Ruby', 'Leo');
-```
-
-### DO (edit a data file for spring datasource)
-```bash
-nano ./src/main/resources/data.sql
-```
-```sql
--- FILE (data.sql)
-INSERT INTO books(title, author) VALUES ('Java', 'Thomas');
-```
-
 ### DO (check the project)
 ```bash
+./gradlew -q clean check
+```
+```bash
+    # >> Result:nothing
+```
+
+
+
+
+## Develop the gradle build file
+
+### DO (add the package `rest-assured` to the gradle build file)
+```bash
+nano ./build.gradle.kts
+```
+```sql
+-- FILE (build.gradle.kts)
+...
+	testImplementation("org.springframework.boot:spring-boot-starter-test")
+	testImplementation("io.rest-assured:rest-assured")
+}
+```
+
+### DO (check the project to get the error)
+```bash
+./gradlew -q clean check
+```
+```bash
+    # >> Result
+    Errors occurred while build effective model from /home/gudao/.gradle/caches/modules-2/files-2.1/com.sun.xml.bind/jaxb-osgi/2.2.10/c926a537af564ec047ec6308df1d0d2a03364a86/jaxb-osgi-2.2.10.pom:
+    'dependencyManagement.dependencies.dependency.systemPath' for com.sun:tools:jar must specify an absolute path but is ${tools.jar} in com.sun.xml.bind:jaxb-osgi:2.2.10    
+```
+
+### DO (edit a gradle build file for spring boot)
+```bash
+nano ./build.gradle.kts
+```
+```sql
+-- FILE (build.gradle.kts)
+...
+	testImplementation("org.springframework.boot:spring-boot-starter-test")
+	testImplementation("io.rest-assured:rest-assured"){
+		exclude("com.sun.xml.bind", "jaxb-osgi")
+	}
+}
+...
+```
+
+### DO (check the project again to get many warnings)
+
+```bash
 ./gradlew -q check
+```
+```bash
+    # >> Result
+    WARNING: An illegal reflective access operation has occurred
+    WARNING: Illegal reflective access by org.codehaus.groovy.reflection.CachedClass (file:/home/gudao/.gradle/caches/modules-2/files-2.1/org.codehaus.groovy/groovy/2.5.14/f0a005fb21e7bd9b7ebf04cd2ecda0fc8f3be59d/groovy-2.5.14.jar) to method java.lang.Object.finalize()
+    WARNING: Please consider reporting this to the maintainers of org.codehaus.groovy.reflection.CachedClass
+    WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+    WARNING: All illegal access operations will be denied in a future release
+```
+
+### DO (edit a gradle build file for spring boot again)
+```bash
+nano ./build.gradle.kts
+```
+```sql
+-- FILE (build.gradle.kts)
+...
+	useJUnitPlatform()
+	jvmArgs("--illegal-access=deny")
+...
+```
+
+### DO (check the project noch again)
+```bash
+./gradlew -q clean check
 ```
 ```bash
     # >> Result: nothing
@@ -133,188 +169,184 @@ INSERT INTO books(title, author) VALUES ('Java', 'Thomas');
 
 
 
-## Check The Web App
-
-### DO (run the web application with gradle)
-
+## DO (Upgrade the gradle version to 6.8)
 ```bash
-./gradlew -q bootRun
+./gradlew wrapper --gradle-version=6.8
 ```
 ```bash
     # >> Result
-    <==========---> 83% EXECUTING [35s]
-    > :bootRun   
+    Welcome to Gradle 6.8!
+    
+    Here are the highlights of this release:
+     - Faster Kotlin DSL script compilation
+     - Vendor selection for Java toolchains
+     - Convenient execution of tasks in composite builds
+     - Consistent dependency resolution
+    
+    For more details see https://docs.gradle.org/6.8/release-notes.html
 ```
 
-### DO (access all book's records in the web application api)
-```bash
-curl --no-progress-meter http://localhost:8080/api/books | json_pp
-```
-```bash
-    # >> Result
-    [
-        {
-            "author" : "Leo",
-            "id" : 1,
-            "title" : "Ruby"
-        },
-        {
-            "author" : "Thomas",
-            "id" : 2,
-            "title" : "Java"
-        }
-    ]
-```
 
-### DO (access the first book's record in the web application api)
+
+
+## Develop REST Assured Testing for The Web App
+
+### DO (add a new book controller testing file)
 ```bash
-curl --no-progress-meter http://localhost:8080/api/books/1 | json_pp
+touch ./src/test/kotlin/de/iotoi/RestAssuredBookControllerTests.kt
 ```
 ```bash
-    # >> Result
-    {
-      "author" : "Leo",
-      "id" : 1,
-      "title" : "Ruby"
-    }
+nano ./src/test/kotlin/de/iotoi/RestAssuredBookControllerTests.kt
 ```
+```kotlin
+# FILE (RestAssuredBookControllerTests.kt)
+package de.iotoi
 
-### DO (access the web app api if a record exists not)
-```bash
-curl --no-progress-meter http://localhost:8080/api/books/3 | json_pp
-```
-```bash
-    # >> Result
-    {
-        "error" : "Internal Server Error",
-        "message" : "No message available",
-        "path" : "/api/books/3",
-        "status" : 500,
-        "timestamp" : "2021-01-15T12:45:55.075+00:00",
-        "trace" : "java.lang.RuntimeException\n\tat de.iotoi.BookRestController$findOne$1.get(BookRestController.kt:37)\n\tat
-        .......
-    }
-```
-
-### DO (stop the web server)
-```bash
-# DO (Ctrl+C)
-```
-
-
-
-
-## Add The ExceptionHandler @ControllerAdvice annotation
-
-### DO (make a new folder for exception handler)
-```bash
-mkdir ./src/main/kotlin/de/iotoi/exception
-```
-
-### DO (add a new book's exception file)
-```bash
-touch ./src/main/kotlin/de/iotoi/exception/BookNotFoundException.kt
-```
-```bash
-nano ./src/main/kotlin/de/iotoi/exception/BookNotFoundException.kt
-```
-```Kotlin
-# FILE (BookNotFoundException.kt)
-package de.iotoi.exception
-
-class BookNotFoundException : RuntimeException()
-```
-
-### DO (add a new rest's exception handler file)
-```bash
-touch ./src/main/kotlin/de/iotoi/exception/RestExceptionHandler.kt
-```
-```bash
-nano ./src/main/kotlin/de/iotoi/exception/RestExceptionHandler.kt
-```
-```Kotlin
-# FILE (RestExceptionHandler.kt)
-package de.iotoi.exception
-
-import org.springframework.http.HttpHeaders
+import de.iotoi.model.Book
+import io.restassured.RestAssured
+import io.restassured.response.Response
+import org.apache.commons.lang3.RandomStringUtils
+import org.assertj.core.api.Assertions.assertThat
+import org.junit.jupiter.api.Test
 import org.springframework.http.HttpStatus
-import org.springframework.http.ResponseEntity
-import org.springframework.web.bind.annotation.ControllerAdvice
-import org.springframework.web.bind.annotation.ExceptionHandler
-import org.springframework.web.context.request.WebRequest
-import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler
-import java.lang.Exception
+import org.springframework.http.MediaType
 
-@ControllerAdvice
-class RestExceptionHandler : ResponseEntityExceptionHandler() {
-    @ExceptionHandler(BookNotFoundException::class)
-    protected fun handleNotFound(
-        exception: Exception?, request: WebRequest?
-    ): ResponseEntity<Any> {
-        return handleExceptionInternal(
-            exception!!,
-            "{\"status\": \"${HttpStatus.NOT_FOUND}\", \"message\": \"Book not found\", \"class\": \"${RestExceptionHandler::class.java.name}\"}",
-            HttpHeaders(),
-            HttpStatus.NOT_FOUND,
-            request!!
+
+class RestAssuredBookControllerTests {
+    private fun createRandomBook(): Book {
+        val book = Book()
+        book.title = RandomStringUtils.randomAlphabetic(10)
+        book.author = RandomStringUtils.randomAlphabetic(15)
+        return book
+    }
+
+    private fun createBookAsUri(book: Book): String {
+        val response: Response = RestAssured.given()
+            .contentType(MediaType.APPLICATION_JSON_VALUE)
+            .body(book)
+            .post(API_ROOT)
+        return API_ROOT + "/" + response.jsonPath().get("id")
+    }
+
+    /*******************************************
+     *
+     * test finding books using variant methods
+     *
+     */
+    @Test
+    fun whenGetAllBooks_thenOK() {
+        val response = RestAssured.get(API_ROOT)
+        assertThat(HttpStatus.OK.value()).isEqualTo(response.statusCode)
+    }
+
+    @Test
+    fun whenGetBooksByTitle_thenOK() {
+        val book: Book = createRandomBook()
+        createBookAsUri(book)
+        val response = RestAssured.get(
+            API_ROOT + "/title/" + book.title
         )
+        assertThat(HttpStatus.OK.value()).isEqualTo(response.statusCode)
+        assertThat(
+            response.`as`<List<*>>(MutableList::class.java).isNotEmpty()
+        ).isTrue
+    }
+
+    @Test
+    fun whenGetCreatedBookById_thenOK() {
+        val book: Book = createRandomBook()
+        val location = createBookAsUri(book)
+        val response = RestAssured.get(location)
+        assertThat(HttpStatus.OK.value()).isEqualTo(response.statusCode)
+        assertThat(book.title).isEqualTo(response.jsonPath()["title"])
+    }
+
+    @Test
+    fun whenGetNotExistBookById_thenNotFound() {
+        val response = RestAssured.get(API_ROOT + "/" + RandomStringUtils.randomNumeric(4))
+        println("response.statusCode = " + response.statusCode)
+        assertThat(HttpStatus.NOT_FOUND.value()).isEqualTo(response.statusCode)
+    }
+
+    /*************************************
+     *
+     * test creating a new book
+     *
+     */
+    @Test
+    fun whenCreateNewBook_thenCreated() {
+        val book: Book = createRandomBook()
+        val response: Response = RestAssured.given()
+            .contentType(MediaType.APPLICATION_JSON_VALUE)
+            .body(book)
+            .post(API_ROOT)
+        assertThat(HttpStatus.CREATED.value()).isEqualTo(response.statusCode)
+    }
+
+    /*************************************
+     *
+     * test updating an existing book
+     *
+     */
+    @Test
+    fun whenUpdateCreatedBook_thenUpdated() {
+        val book: Book = createRandomBook()
+        val location = createBookAsUri(book)
+        book.id = location.split("api/books/").toTypedArray()[1].toLong()
+        book.author = "newAuthor"
+        var response: Response = RestAssured.given()
+            .contentType(MediaType.APPLICATION_JSON_VALUE)
+            .body(book)
+            .put(location)
+        assertThat(HttpStatus.OK.value()).isEqualTo(response.statusCode)
+        response = RestAssured.get(location)
+        assertThat(HttpStatus.OK.value()).isEqualTo(response.statusCode)
+        assertThat("newAuthor").isEqualTo(response.jsonPath().get("author"))
+    }
+
+    companion object {
+        private const val API_ROOT = "http://localhost:8080/api/books"
     }
 }
 ```
 
-### DO (edit the rest controller file)
-```bash
-nano ./src/main/kotlin/de/iotoi/model/BookRestController.kt
-```
-```bash
-# FILE (BookRestController.kt)
-...kotlin
-...
-import de.iotoi.exception.BookNotFoundException
-...
-    @GetMapping("/{id}")
-    open fun findOne(@PathVariable id: Long?): Book? {
-        return bookRepository!!.findById(id!!)
-            .orElseThrow { BookNotFoundException() }
-    }
-...
-```
-
-### DO (run the web application with gradle again)
-
+### DO (start the web app)
 ```bash
 ./gradlew -q bootRun
 ```
+
+### DO (run the testing in the project with gradle)
 ```bash
-    # >> Result
-    <==========---> 83% EXECUTING [35s]
-    > :bootRun   
+./gradlew -q clean test
+```
+OR
+```bash
+./gradlew -q clean test --tests de.iotoi.RestAssuredBookControllerTests
+```
+```bash
+    # >> Result: nothing
 ```
 
-### DO (access in the web app api if a record exists not)
+### DO (see the testing report)
 ```bash
- curl --no-progress-meter http://localhost:8080/api/books/3 | json_pp
+google-chrome ./build/reports/tests/test/index.html
 ```
-```bash
-    {
-        "class" : "de.iotoi.exception.RestExceptionHandler",
-        "message" : "Book not found",
-        "status" : "404 NOT_FOUND"
-    }
-```
+![result_testing](doc/image/result_testing.png)
 
 
 
 
 ## References
-- https://www.baeldung.com/spring-boot-start
-- https://www.sourcecodeexamples.net/2019/10/putmapping-spring-boot-example.html
-- https://www.concretepage.com/spring-boot/spring-boot-rest-example
-- https://www.baeldung.com/curl-rest
-- https://www.baeldung.com/rest-assured-tutorial
 - https://rest-assured.io/
-- https://www.baeldung.com/exception-handling-for-rest-with-spring
-- https://zetcode.com/springboot/controlleradvice/
+- https://medium.com/@nieldw/exclude-a-transitive-dependency-with-gradles-kotlin-dsl-82fb41da67f
+- https://github.com/kucharzyk/spring-kotlin-angular4/blob/master/build.gradle.kts
+- https://docs.gradle.org/current/userguide/building_java_projects.html
+- https://stackoverflow.com/questions/53790182/get-the-current-value-of-illegal-access-setting-in-java
+- https://www.gitmemory.com/issue/spring-projects/spring-boot/22303/656792408
+- https://backstage.forgerock.com/knowledge/kb/article/a15048811
+- https://github.com/gradle/gradle/releases
+ 
+
 
 
 ## References for tools
